[gd_scene load_steps=21 format=3 uid="uid://ddgx1hll377nx"]

[ext_resource type="Script" path="res://ui/combat_ui.gd" id="1_cy8ae"]
[ext_resource type="Shader" path="res://ui/GrayscaleIcon.gdshader" id="3_pilcd"]
[ext_resource type="PackedScene" uid="uid://d0hcis8q3seqg" path="res://ui/status_icon.tscn" id="4_mn0g0"]
[ext_resource type="Texture2D" uid="uid://b5bhqfskef7lb" path="res://imagese/icon/melee_attack.png" id="6_puss2"]
[ext_resource type="Texture2D" uid="uid://bonh4ibo7lwda" path="res://imagese/icon/ranged_attack.png" id="7_i51fj"]
[ext_resource type="Material" uid="uid://cbfshcwnlh4n4" path="res://shaders/end_button_ShaderMaterial.tres" id="7_prf7u"]
[ext_resource type="Texture2D" uid="uid://wxkh5qyiy8c1" path="res://imagese/icon/basic_magic.png" id="8_do1mp"]
[ext_resource type="Texture2D" uid="uid://db5bsesycvfap" path="res://imagese/icon/general/icon_movement.png" id="8_h5dvs"]
[ext_resource type="Texture2D" uid="uid://d2inwi510pxwu" path="res://imagese/icon/general/icon_attack.png" id="9_xu3ax"]
[ext_resource type="Texture2D" uid="uid://kurtgu16qbex" path="res://imagese/icon/general/icon_spell.png" id="10_it5fu"]
[ext_resource type="Texture2D" uid="uid://cjg3dfrf4c2tu" path="res://imagese/icon/general/icon_movement_cancelled.png" id="11_elaob"]
[ext_resource type="Texture2D" uid="uid://1m1qaq03mgeg" path="res://imagese/icon/general/icon_attack_cancelled.png" id="12_hk3va"]
[ext_resource type="Texture2D" uid="uid://smbh8xo266sr" path="res://imagese/icon/general/icon_spell_cancelled.png" id="13_uqljk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1qt58"]
shader = ExtResource("3_pilcd")
shader_parameter/color_factor = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kj4jo"]
bg_color = Color(0, 0, 0, 0.52549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_um0nj"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dsm8"]
shadow_size = 10
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_do5rw"]
bg_color = Color(0.243137, 0.243137, 0.243137, 1)
shadow_size = 10
shadow_offset = Vector2(0, -5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5f3j3"]

[sub_resource type="LabelSettings" id="LabelSettings_v6mvw"]
font_size = 100

[node name="UI" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_cy8ae")

[node name="TurnQueue" type="PanelContainer" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 400.0
offset_top = 16.0
offset_right = 804.0
offset_bottom = 80.0

[node name="Queue" type="HBoxContainer" parent="TurnQueue"]
layout_mode = 2

[node name="Status" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 336.0
offset_right = 99.0
offset_bottom = 592.0

[node name="Actions" type="Control" parent="."]
anchors_preset = 0
offset_left = 860.0
offset_top = 920.0
offset_right = 1004.0
offset_bottom = 1032.0

[node name="StatusIcon" parent="Actions" instance=ExtResource("4_mn0g0")]
layout_mode = 2
anchor_left = -2.322
anchor_top = -4.649
anchor_right = -2.322
anchor_bottom = -4.649
offset_left = 476.368
offset_top = 524.688
offset_right = 588.368
offset_bottom = 636.688

[node name="Icon" parent="Actions/StatusIcon" index="0"]
material = SubResource("ShaderMaterial_1qt58")
flip_h = false

[node name="ActionsPanel" type="PanelContainer" parent="Actions"]
layout_mode = 0
offset_left = -194.0
offset_top = 13.0
offset_right = 129.0
offset_bottom = 66.0

[node name="ActionsGrid" type="GridContainer" parent="Actions/ActionsPanel"]
layout_mode = 2
columns = 6

[node name="Slot1" type="Button" parent="Actions/ActionsPanel/ActionsGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon = ExtResource("6_puss2")
icon_alignment = 1
expand_icon = true

[node name="Slot2" type="Button" parent="Actions/ActionsPanel/ActionsGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon = ExtResource("7_i51fj")
icon_alignment = 1
expand_icon = true

[node name="Slot3" type="Button" parent="Actions/ActionsPanel/ActionsGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon = ExtResource("8_do1mp")
icon_alignment = 1
expand_icon = true

[node name="Slot4" type="Button" parent="Actions/ActionsPanel/ActionsGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Slot5" type="Button" parent="Actions/ActionsPanel/ActionsGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Slot6" type="Button" parent="Actions/ActionsPanel/ActionsGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon_alignment = 1
expand_icon = true

[node name="Movement" type="Label" parent="Actions"]
layout_mode = 0
offset_left = -190.0
offset_top = 76.0
offset_right = -150.0
offset_bottom = 102.0
tooltip_text = "Movement"
mouse_filter = 1
theme_override_colors/font_color = Color(0.960784, 0.898039, 0.231373, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_kj4jo")
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndPhaseButton" type="Button" parent="Actions"]
modulate = Color(0, 0, 0, 1)
visibility_layer = 8
material = ExtResource("7_prf7u")
clip_contents = true
layout_mode = 0
offset_left = 25.0
offset_top = 77.0
offset_right = 136.0
offset_bottom = 117.0
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/disabled = SubResource("StyleBoxFlat_um0nj")
theme_override_styles/hover = SubResource("StyleBoxFlat_3dsm8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_do5rw")
theme_override_styles/normal = SubResource("StyleBoxFlat_5f3j3")
text = "End Phase"

[node name="Label" type="Label" parent="Actions/EndPhaseButton"]
z_index = 1
layout_mode = 0
offset_left = 16.0
offset_top = 7.0
offset_right = 99.0
offset_bottom = 30.0
text = "end_phase
"

[node name="Information" type="PanelContainer" parent="Actions"]
layout_mode = 0
offset_left = 860.0
offset_top = -170.0
offset_right = 1057.0
offset_bottom = 106.0

[node name="Text" type="RichTextLabel" parent="Actions/Information"]
layout_mode = 2
bbcode_enabled = true
scroll_following = true
shortcut_keys_enabled = false

[node name="SelectTargetMessage" type="PanelContainer" parent="Actions"]
visible = false
layout_mode = 0
offset_left = 185.0
offset_top = -38.0
offset_right = 385.0
offset_bottom = 2.0

[node name="MarginContainer" type="MarginContainer" parent="Actions/SelectTargetMessage"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Label" type="Label" parent="Actions/SelectTargetMessage/MarginContainer"]
layout_mode = 2
text = "Select Target"

[node name="Turn_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 989.0
offset_right = 771.0
offset_bottom = 1012.0
text = "ahah
"

[node name="Phase_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 1018.0
offset_right = 771.0
offset_bottom = 1041.0
text = "lol
"

[node name="Phase_Label_Beginning" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.0
offset_right = 197.0
offset_bottom = 137.0
grow_horizontal = 2
text = "PHASE : "
label_settings = SubResource("LabelSettings_v6mvw")
vertical_alignment = 1

[node name="Phase_Label_Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Phase_Label_movement_icon" type="Sprite2D" parent="."]
position = Vector2(890, 300)
texture = ExtResource("8_h5dvs")

[node name="Phase_Label_attack_icon" type="Sprite2D" parent="."]
position = Vector2(960, 300)
texture = ExtResource("9_xu3ax")

[node name="Phase_Label_spell_icon" type="Sprite2D" parent="."]
position = Vector2(1040, 300)
texture = ExtResource("10_it5fu")

[node name="Phase_Label_movement_icon_cancelled" type="Sprite2D" parent="."]
position = Vector2(890, 300)
texture = ExtResource("11_elaob")

[node name="Phase_Label_attack_icon_cancelled" type="Sprite2D" parent="."]
position = Vector2(960, 300)
texture = ExtResource("12_hk3va")

[node name="Phase_Label_spell_icon_cancelled" type="Sprite2D" parent="."]
position = Vector2(1040, 300)
texture = ExtResource("13_uqljk")

[connection signal="pressed" from="Actions/EndPhaseButton" to="." method="_on_end_phase_button_pressed"]

[editable path="Actions/StatusIcon"]
